# bracket-cli

./: .gitignore  Cargo.toml  README.md  build.sh  build.yml
.github/workflows/: rust.yml
cookly-cli/: Cargo.toml  build.sh
cookly-cli/src/: main.rs
install/: install.bat  install.sh
main/: Cargo.toml  build.sh
main/src/: args.rs  main.rs  utils.rs
main/src/app_runner/: mod.rs  redeploy.rs
main/src/aws/: setup.rs
main/src/config/: config.rs
main/src/ec2/: connect.rs  create.rs  list.rs  mod.rs  stop.rs
main/src/github/: setup.rs
main/src/neptune/: list.rs
src/: args.rs  main.rs
