[package]
name = "bracket"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-ec2 = "1.12.0"
aws-sdk-ec2instanceconnect = "1.9.0"
aws-sdk-neptune = "1.10.0"
aws-sdk-cloudwatch = "1.10.0"
aws-smithy-types = "1.1.1"
clap = { version = "4.4.12", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0.2"
duct = "0.13"
chrono = "0.4.31"
regex = "1"
dialoguer = "0.9.0"
rpassword = "7.3.1"
toml = "0.8.19"
