[package]
name = "bracket"
version = "1.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.14"
aws-sdk-ec2 = "1.103.0"
aws-sdk-ec2instanceconnect = "1.54.0"
aws-sdk-neptune = "1.56.0"
aws-sdk-cloudwatch = "1.60.0"
aws-smithy-types = "1.2.12"
aws-sdk-apprunner = "1.55.0"
clap = { version = "4.4.12", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
duct = "0.13"
chrono = "0.4.31"
regex = "1"
dialoguer = "0.11.0"
rpassword = "7.3.1"
toml = "0.8.19"
reqwest = "0.12.7"
semver = "1.0.23"
colored = "2.1.0"
